--- a/2.SPEC/200.cr_kickoff.md
+++ b/2.SPEC/200.cr_kickoff.md
@@ -1,8 +1,41 @@
 ---
-equipemoe: 
-nomcode: 
-groupetd: 
-guide: http://casisbelli.insa-rouen.fr/wiki/pmwiki.php?n=FilRouge.MenerReunionLancement
+equipemoe : kouignamann
+nomcode : agendaperso
+groupetd : 2
+guide : http://casisbelli.insa-rouen.fr/wiki/pmwiki.php?n=FilRouge.MenerReunionLancement
 ---
 
 # Compte rendu de la réunion de lancement
+
+## Cartouche
+ - meneur : Guillaume Cavelier
+ - scribe : Anaëlle Morin
+
+## Chronogramme de la réunion
+
+14h27 -> 14h30 : Présentation
+14h30 -> 14h38 : Questions sur les zones d'ombre
+14h38 -> 14h42 : Cas d'utilisation
+14h42 -> 14h45 : Pièces à conviction
+
+## Informations - Actions
+
+### Présentation
+
+
+
+### Questions sur les zones d'ombre
+
+
+
+### Cas d'utilisation
+
+
+
+### Pièces à conviction
+
+
+
+## Liste des pièces à convictions
+
+Liste des pièces attendues de la part de la MOA : 
