--- a/2.SPEC/210.liste_cas_priorisee.md
+++ b/2.SPEC/210.liste_cas_priorisee.md
@@ -9,5 +9,6 @@ outil: http://www.tablesgenerator.com/markdown_tables
 
 | ID    | Titre                        | Classement | Prio.Doc | Content+ | Content- | Antécédents | Format | Maquette |
 |-------|------------------------------|------------|----------|----------|----------|-------------|--------|----------|
-| EXE00 | Exemple : ajouter un contact | 1          | Prio     | 3        | 5        | aucun       | COK    | 1        |
+| EXE01 | il faudra pouvoir specifier son groupe pour n'avoir que les cours de sont groupe | 1          | Prio     | 3        | 3        | aucun       | COK    | 1        |
 |       |                              |            |          |          |          |             |        |          |
+ 	
