--- a/2.SPEC/210.liste_cas_priorisee.md
+++ b/2.SPEC/210.liste_cas_priorisee.md
@@ -7,8 +7,10 @@ outil: http://www.tablesgenerator.com/markdown_tables
 ---
 # Liste de cas priorisée
 
-| ID    | Titre                        | Classement | Prio.Doc | Content+ | Content- | Antécédents | Format | Maquette |
-|-------|------------------------------|------------|----------|----------|----------|-------------|--------|----------|
-| EXE01 | il faudra pouvoir specifier son groupe pour n'avoir que les cours de sont groupe | 1          | Prio     | 3        | 3        | aucun       | COK    | 1        |
-|       |                              |            |          |          |          |             |        |          |
- 	
+| ID    | Titre                                                                            | Classement | Prio.Doc                     | Content+ | Content- | Antécédents | Format | Maquette |
+|-------|----------------------------------------------------------------------------------|------------|------------------------------|----------|----------|-------------|--------|----------|
+| EXE01 | il faudra pouvoir specifier son groupe pour n'avoir que les cours de sont groupe | 1          | Intuitif                     | 3        | 3        | aucun       | COK    | 0        |
+| EXE02 | Il faudrat qu'on puisse noter les devoirs pour chaques cours                     | 2          | Risque d'évolution du besoin | 4        | 3        | EXE01       | COK    | 1        |
+| EXE03 | Il faudra un pointage de présence en cours                                       | 3          | Flou                         | 5        | 2        | aucun       | COK    | 0        |
+| EXE04 | Demande de déplacement de cours                                                  | 4          | Risque d'évolution du besoin | 5        | 3        | EXE01       | COK    | 1        |
+
