--- a/2.SPEC/200.cr_kickoff.md
+++ b/2.SPEC/200.cr_kickoff.md
@@ -35,7 +35,7 @@ guide : http://casisbelli.insa-rouen.fr/wiki/pmwiki.php?n=FilRouge.MenerReunionL
  - Le système de vérification de présence (d'appel) est-il fiable ? Non, les élèves peuvent mentir et cocher qu'ils sont présents alors que ce n'est pas le cas. Le professeur devra donc dans tous les cas recompter le nombre de présents dans la salle.
  - Qui peut modifier quoi ? Concernant les abscences, les utilisateurs peuvent les indiquer eux-mêmes. Pour les déplacements de cours, il faut passer par des administrateurs (pour avoir une vérification).
  - Comment seront indiqués les devoirs à faire dans un cours ? Pour chaque cours, l'utilisateur pourra voir rapidement les devoirs à faire par un système d'infobulle.
- - L'application est-elle compatible avec le site www.agendas.insa-rouen.fr ? Oui, mais il faut que l'utilisateur puisse accéder uniquement aux cours et salles qui l'intéressent (sûrement via l'ajout d'une surcouche).
+ - L'application est-elle compatible avec le site http://agendas.insa-rouen.fr ? Oui, mais il faut que l'utilisateur puisse accéder uniquement aux cours et salles qui l'intéressent (sûrement via l'ajout d'une surcouche).
  - L'application sera-t-elle disponible sur mobile ou via un navigateur Internet ? L'application sera disponible sur mobile.
  - Que doit-on afficher une fois qu'un devoir a été rendu ? Une fois rendu, le devoir ne doit plus apparaitre.
  - Doit on prévoir d'afficher les informations générales d'un cours ? Oui : il faudra indiquer les crédits ECTS associés au cours et le bloc auquel celui-ci appartient dans le contrat d'études.
