--- a/2.SPEC/200.cr_kickoff.md
+++ b/2.SPEC/200.cr_kickoff.md
@@ -49,8 +49,10 @@ guide : http://casisbelli.insa-rouen.fr/wiki/pmwiki.php?n=FilRouge.MenerReunionL
 
 ### Pièces à conviction
 
- - Liste des cours (contrat d'étude)
+ - Liste des cours (contrat d'étude).
  - Agenda papier.
+ - Liste des élèves et professeurs.
+ - Pages de devoirs.
 
 ## Liste des pièces à convictions
 
