--- a/2.SPEC/200.cr_kickoff.md
+++ b/2.SPEC/200.cr_kickoff.md
@@ -22,7 +22,7 @@ guide : http://casisbelli.insa-rouen.fr/wiki/pmwiki.php?n=FilRouge.MenerReunionL
 
 ### Présentation
 
- - L'application vise à aider les étudiants et professeurs de l'INSA à gérer leur agenda, les déplacements de cours, les abscences ...
+ - L'application vise à aider les étudiants et professeurs de l'INSA à gérer leur agenda, les déplacements de cours, les abscences, ...
  - Possibilité de s'inscrire à un cours pour en recevoir les notifications.
  - Possibilité d'indiquer sa présence à un cours (permet d'indiquer au professeur qui est présent dans la salle). Peut faire office d'appel pour le professeur.
  - Résumé des devoirs à rendre sur Moodle.
@@ -31,21 +31,22 @@ guide : http://casisbelli.insa-rouen.fr/wiki/pmwiki.php?n=FilRouge.MenerReunionL
 
 ### Questions sur les zones d'ombre
 
- - Les élèves ont-ils un compte initialement ou doivent-ils en créer un ? Les élèves ont un compte d'office mais ceux-ci devront s'inscrire à chaque cours qu'ils suivent.
+ - Les élèves ont-ils un compte initialement ou doivent-ils en créer un ? Les élèves ont un compte d'office mais ils devront s'inscrire à chaque cours qu'ils suivent.
  - Le système de vérification de présence (d'appel) est-il fiable ? Non, les élèves peuvent mentir et cocher qu'ils sont présents alors que ce n'est pas le cas. Le professeur devra donc dans tous les cas recompter le nombre de présents dans la salle.
- - Qui peut modifier quoi ? Concernant les abscences, les utilisateurs peuvent les indiquer eux-mêmes. Pour les déplacements de cours, il faut passer par des administrateurs (pour avoir une vérification).
+ - Qui peut modifier quoi ? Concernant les abscences, les professeurs peuvent les indiquer eux-mêmes. Pour les déplacements de cours, il faut passer par des administrateurs (pour avoir une vérification).
  - Comment seront indiqués les devoirs à faire dans un cours ? Pour chaque cours, l'utilisateur pourra voir rapidement les devoirs à faire par un système d'infobulle.
  - L'application est-elle compatible avec le site http://agendas.insa-rouen.fr ? Oui, mais il faut que l'utilisateur puisse accéder uniquement aux cours et salles qui l'intéressent (sûrement via l'ajout d'une surcouche).
  - L'application sera-t-elle disponible sur mobile ou via un navigateur Internet ? L'application sera disponible sur mobile.
  - Que doit-on afficher une fois qu'un devoir a été rendu ? Une fois rendu, le devoir ne doit plus apparaitre.
- - Doit on prévoir d'afficher les informations générales d'un cours ? Oui : il faudra indiquer les crédits ECTS associés au cours et le bloc auquel celui-ci appartient dans le contrat d'études.
+ - Doit-on prévoir d'afficher les informations générales d'un cours ? Oui : il faudra indiquer les crédits ECTS associés au cours et le bloc auquel celui-ci appartient dans le contrat d'études.
  - Peut-on voir les cours des autres ? Non, pas dans la première version de l'application mais cela est susceptible d'évoluer en fonction des retours utilisateurs.
  - Y a-t-il d'autres critères à respecter au niveau de l'esthétique de l'application ? Oui, présence d'un mode nuit (changement de couleur : clair -> sombre).
  - Faut-il tenir compte du groupe TD de l'utilisateur ? Oui, l'affectation dans le groupe de TD sera effectuée par les administrateurs.
 
 ### Cas d'utilisation
 
- - L'élève doit pouvoir écrire ses devoirs pour chaque cours via l'application (et, plus généralement, ajouter des commentaires sur celui-ci). Ceux-ci ne seront visibles que par lui.
+ - L'élève doit pouvoir écrire ses devoirs pour chaque cours via l'application (et, plus généralement, ajouter des commentaires sur celui-ci). Ceux-ci ne seront visibles que par lui.  
+ - Le système de vérification de présence ne doit pas être vu en priorité mais une fois que tout le reste sera fait. Il faudra le repenser pour voir si il ne peut pas devenir fiable.
 
 ## Liste des pièces à convictions
 
