--- a/2.SPEC/210.liste_cas_priorisee.md
+++ b/2.SPEC/210.liste_cas_priorisee.md
@@ -9,8 +9,8 @@ outil: http://www.tablesgenerator.com/markdown_tables
 
 | ID    | Titre                                                                            | Classement | Prio.Doc                     | Content+ | Content- | Antécédents | Format | Maquette |
 |-------|----------------------------------------------------------------------------------|------------|------------------------------|----------|----------|-------------|--------|----------|
-| EXE01 | Il faudra pouvoir specifier son groupe pour n'avoir que les cours de son groupe  | 1          | Intuitif                     | 3        | 3        | aucun       |     | 0        |
-| EXE02 | Il faudra qu'on puisse noter les devoirs pour chaque cours                       | 2          | Risque d'évolution du besoin | 4        | 3        | EXE01       | Diagramme de Séquence Système    | 1        |
-| EXE03 | Il faudra un pointage de présence en cours                                       | 4          | Flou                         | 5        | 2        | aucun       | Tableau de Cockburn    | 0        |
-| EXE04 | Demande de déplacement de cours                                                  | 3          | Risque d'évolution du besoin | 5        | 3        | EXE01       | Diagramme d'activités    | 1        |
+| EXE01 | Il faudra pouvoir specifier son groupe pour n'avoir que les cours de son groupe  | 1          | Intuitif                     | 3        | 3        | aucun       |        | 0        |
+| EXE02 | Il faudra qu'on puisse noter les devoirs pour chaque cours                       | 2          | Risque d'évolution du besoin | 4        | 3        | EXE01       | DSS    | 1        |
+| EXE03 | Il faudra un pointage de présence en cours                                       | 4          | Flou                         | 5        | 2        | aucun       | COK    | 0        |
+| EXE04 | Demande de déplacement de cours                                                  | 3          | Risque d'évolution du besoin | 5        | 3        | EXE01       | DAC    | 1        |
 
