--- a/2.SPEC/230.tableau_de_cockburn.md
+++ b/2.SPEC/230.tableau_de_cockburn.md
@@ -1,7 +1,7 @@
 ---
-equipemoe: 
-nomcode: 
-groupetd: 
+equipemoe: kouignamann
+nomcode: agendaperso
+groupetd: 2
 format: http://casisbelli.insa-rouen.fr/wiki/pmwiki.php?n=FilRouge.TableauCockburn
 outil: http://www.tablesgenerator.com/markdown_tables
 ---
