--- a/2.SPEC/230.tableau_de_cockburn.md
+++ b/2.SPEC/230.tableau_de_cockburn.md
@@ -7,8 +7,12 @@ outil: http://www.tablesgenerator.com/markdown_tables
 ---
 # Tableau de Cockburn
 
-| Acteur(s)       | Système                        | 
-|-----------------|--------------------------------|
-| 1. L'acteur ... | 2. Le système ...              | 
-|                 |                                |
-
+| Acteur(s)                                                                        | Système                                                                        |
+|----------------------------------------------------------------------------------|--------------------------------------------------------------------------------|
+| 1. Le professeur se connecte à l'application.                                    | 2. Le système vérifie l'identité du professeur.                                |
+| 3. Le professeur choisi son heure de cours sur l'application.                    | 4. Le système affiche les détails du cours et propose de saisir les absences.  |
+| 5. Le professeur ouvre la saisie des absences aux étudiants.                     | 6. Le système valide l'ouverture et délivre un code d'authentification.        |
+| 7. Les étudiants se connectent à l'application.                                  | 8. Le système vérifie l'identité des étudiants.                                |
+| 9. Les étudiants choisissent l'heure de cours actuelle.                          | 10. Le système affiche les détails du cours et propose de valider sa présence. |
+| 11. Les étudiants valident leur présence en saisissant le code délivré plus tôt. | 12. Le système retourne la validité du code.                                   |
+| 13. Le professeur ferme la saisie des absences aux étudiants.                    | 14. Le système affiche la liste des étudiants absents.                         |
